--- a/Queuee/app/build.gradle
+++ b/Queuee/app/build.gradle
@@ -26,5 +26,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:support-v4:23.0.+"
     compile 'com.firebase:firebase-client-android:2.2.3+'
 }
