fixed java8 environment variable issue

--- a/Queuee2/app/build.gradle
+++ b/Queuee2/app/build.gradle
@@ -27,8 +27,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    retrolambda {
-        jdk "libs/jdk8"
+    retrolambda{
+        jdk System.getenv("JAVA8_HOME")
     }
 }
 
