Queue working as a service

--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:name=".InQueueView"
             android:label="@string/app_name" >
         </activity>
+
+        <service android:name=".model.FirebaseService" />
     </application>
 
 </manifest>
