--- a/Queuee2/app/build.gradle
+++ b/Queuee2/app/build.gradle
@@ -36,4 +36,7 @@ retrolambda{
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.firebase:firebase-client-android:2.2.3+'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
