--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".NewQueueView"
+            android:name=".NewQueueActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".InQueueView"
-            android:label="@string/app_name" >
-        </activity>
-
-        <service android:name=".model.FirebaseService" />
+        <!--<service android:name=".model.FirebaseService" />-->
     </application>
 
 </manifest>
