--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".NewQueueActivity"
+            android:name=".AddToQueueActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
