--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <application
         android:allowBackup="true"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -25,6 +24,14 @@
         <activity
             android:name=".InQueueActivity"
             android:label="@string/title_activity_in_queue" >
+        </activity>
+        <activity
+            android:name=".ThankYouActivity"
+            android:label="@string/title_activity_thank_you" >
+        </activity>
+        <activity
+            android:name=".model.YouAreNextActivity"
+            android:label="@string/title_activity_you_are_next" >
         </activity>
     </application>
 
