--- a/Queuee2/app/build.gradle
+++ b/Queuee2/app/build.gradle
@@ -28,11 +28,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    sourceSets {
-        main {
-            res {
-                srcDir 'src/main/res/drawable/add_to_queue_button_not_pressed/'
-            }
+    repositories {
+        flatDir {
+            dirs 'libs'
         }
     }
 }
@@ -43,6 +41,7 @@ retrolambda{
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name:'estimote-sdk', ext:'aar')
     compile 'com.firebase:firebase-client-android:2.2.3+'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.14'
