--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="app.com.example.android.queuee2" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <!--<uses-permission android:name="android.permission.BLUETOOTH"/>-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -16,7 +16,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,17 +30,9 @@
             android:label="@string/title_activity_thank_you" >
         </activity>
         <activity
-            android:name=".model.YouAreNextActivity"
-            android:label="@string/title_activity_you_are_next" >
-        </activity>
-        <activity
             android:name=".YouAreNextActivity"
             android:label="@string/title_activity_you_are_next" >
-        </activity>
-        <activity
-            android:name=".YouAreNext"
-            android:label="@string/title_activity_you_are_next" >
-        </activity>
+        </activity>>
     </application>
 
 </manifest>
