--- a/Queuee2/app/build.gradle
+++ b/Queuee2/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.facebook.stetho:stetho:1.2.0'
 }
