--- a/CashierQueuee/app/src/main/AndroidManifest.xml
+++ b/CashierQueuee/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".MyApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -19,6 +19,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="app.com.example.android.queuee2.StartQueue"
+            android:label="@string/title_activity_start_queue" >
+        </activity>
+        <activity
+            android:name=".StartQueue"
+            android:label="@string/title_activity_start_queue" >
+        </activity>
+        <activity
+            android:name=".StartQueueActivity"
+            android:label="@string/title_activity_start_queue" >
+        </activity>
+        <activity
+            android:name=".QueueInProgressActivity"
+            android:label="@string/title_activity_queue_in_progress" >
         </activity>
     </application>
 
