--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -6,11 +6,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme" >
+
+
         <activity
             android:name=".AddToQueueActivity"
             android:label="@string/app_name" >
@@ -21,7 +23,6 @@
             </intent-filter>
         </activity>
 
-        <!-- <service android:name=".model.FirebaseService" /> -->
         <activity
             android:name=".InQueueActivity"
             android:label="@string/title_activity_in_queue" >
@@ -34,6 +35,12 @@
             android:name=".YouAreNextActivity"
             android:label="@string/title_activity_you_are_next" >
         </activity>
+
+        <service
+            android:name=".service.CheckQueueService"
+            android:enabled="true"
+            >
+        </service>
     </application>
 
 </manifest>
