--- a/Queuee2/app/build.gradle
+++ b/Queuee2/app/build.gradle
@@ -41,6 +41,7 @@ retrolambda{
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:design:22.2.1'
     compile 'com.estimote:sdk:0.9.1@aar'
     compile 'com.firebase:firebase-client-android:2.2.3+'
     compile 'io.reactivex:rxandroid:1.0.1'
