--- a/CashierQueuee/app/src/main/AndroidManifest.xml
+++ b/CashierQueuee/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.abraham.cashierqueuee" >
+    package="com.example.abraham.cashierqueuee">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,23 +10,21 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".StartQueueActivity"
-            android:label="@string/title_activity_start_queue" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".StartQueueActivity"
+            android:label="@string/title_activity_start_queue"></activity>
+        <activity
             android:name=".QueueInProgressActivity"
-            android:label="@string/title_activity_queue_in_progress" >
-        </activity>
+            android:label="@string/title_activity_queue_in_progress"></activity>
     </application>
 
 </manifest>
