changed assets and queue messages

--- a/CashierQueuee/local.properties
+++ b/CashierQueuee/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 15 13:08:48 CEST 2015
->>>>>>>=animations partially done
-sdk.dir=/Users/bkach/Library/Android/sdk
+#Fri Oct 16 10:46:55 CEST 2015
+>>>>>>>=spacing/alligning on cashier app
+sdk.dir=C\:\\Users\\Abraham\\AppData\\Local\\Android\\sdk1
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
