--- a/Queuee2/app/src/main/AndroidManifest.xml
+++ b/Queuee2/app/src/main/AndroidManifest.xml
@@ -19,11 +19,6 @@
         <activity
             android:name=".AddToQueueActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".InQueueActivity"
@@ -41,7 +36,12 @@
 
         <activity
             android:name=".SplashActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
